--- a/src/main/resources/webapp/static/components/page/bus/bus.css
+++ b/src/main/resources/webapp/static/components/page/bus/bus.css
@@ -29,7 +29,7 @@
       margin-right: 5%;
       color: #fff;
       background-color: #B8BA98; }
-    .page-bus .bus-header a {
+    .page-bus .bus-header button {
       height: 15px;
       width: 15px;
       vertical-align: middle;
@@ -48,10 +48,12 @@
       float: right;
       padding: 4px;
       margin-right: 15px; }
-      .page-bus .bus-body .bus-text a {
+      .page-bus .bus-body .bus-text button {
         color: #fff;
         font-size: 12px;
-        font-weight: normal; }
+        font-weight: normal;
+        border: none;
+        background: #B8BA98; }
     .page-bus .bus-body td {
       padding: 4px 10px; }
       .page-bus .bus-body td .user-name {
@@ -63,7 +65,7 @@
         left: 0;
         font-size: 12px; }
     @media screen and (max-width: 768px) {
-      .page-bus .bus-body a {
+      .page-bus .bus-body button {
         display: block;
         height: 50px;
         color: #60418c;
@@ -72,9 +74,10 @@
         font-weight: bold;
         background-position: center;
         background-size: contain;
-        background-repeat: no-repeat; } }
+        background-repeat: no-repeat;
+        border: none; } }
     @media screen and (min-width: 768px) {
-      .page-bus .bus-body a {
+      .page-bus .bus-body button {
         display: block;
         height: 100px;
         color: #60418c;
@@ -83,22 +86,23 @@
         font-weight: bold;
         background-position: center;
         background-size: contain;
-        background-repeat: no-repeat; } }
+        background-repeat: no-repeat;
+        border: none; } }
     .page-bus .bus-body td.icon-seat-void {
       width: inherit; }
-      .page-bus .bus-body td.icon-seat-void a {
+      .page-bus .bus-body td.icon-seat-void button {
         background-image: url("/static/images/seat-void.png");
         width: 100%;
         color: #fff; }
     .page-bus .bus-body td.icon-seat-order {
       width: inherit; }
-      .page-bus .bus-body td.icon-seat-order a {
+      .page-bus .bus-body td.icon-seat-order button {
         background-image: url("/static/images/seat-order.png");
         width: 100%;
         color: #fff; }
     .page-bus .bus-body td.icon-seat-select {
       width: inherit; }
-      .page-bus .bus-body td.icon-seat-select a {
+      .page-bus .bus-body td.icon-seat-select button {
         background-image: url("/static/images/seat-select.png") !important;
         color: yellow;
         width: 100%; }
