--- a/src/main/resources/webapp/static/pkg/all.css
+++ b/src/main/resources/webapp/static/pkg/all.css
@@ -3,6 +3,157 @@
 
 /*# sourceMappingURL=bind.css.map */
 
+/*!/components/page/search/result/result.css*/
+.page-search-result .time-nav {
+  text-align: center;
+  color: #007aff;
+  line-height: 44px; }
+  .page-search-result .time-nav .mui-action {
+    width: 40px;
+    margin: 3px;
+    color: #007aff;
+    font-size: 20px;
+    padding: 5px 1px;
+    text-align: center;
+    border: 1px solid #ddd; }
+  .page-search-result .time-nav .time {
+    padding-left: 20px;
+    padding-right: 20px; }
+
+/*# sourceMappingURL=result.css.map */
+
+/*!/components/page/bus/bus.css*/
+.page-bus {
+  background-color: #fff;
+  height: 100%; }
+  .page-bus .bus-backDoor {
+    position: absolute; }
+  .page-bus .user-bar {
+    top: 45px;
+    background-color: #fff; }
+  .page-bus .mui-scroll-wrapper {
+    background-color: #fff; }
+    .page-bus .mui-scroll-wrapper .mui-scroll {
+      padding-bottom: 50px; }
+  .page-bus .mui-scroll {
+    padding: 10px;
+    background-color: #fff; }
+  .page-bus .mui-table-view-cell.mui-active {
+    background-color: #fff; }
+  .page-bus .bus-header {
+    text-align: center;
+    font-size: 12px; }
+    .page-bus .bus-header .bus-driver {
+      float: left;
+      width: 12%;
+      margin-left: 5%; }
+    .page-bus .bus-header .bus-door {
+      float: right;
+      display: inline-block;
+      width: 20px;
+      margin-right: 5%;
+      color: #fff;
+      background-color: #B8BA98; }
+    .page-bus .bus-header button {
+      height: 15px;
+      width: 15px;
+      vertical-align: middle;
+      display: inline-block;
+      margin-left: 5px; }
+    .page-bus .bus-header .void {
+      background-color: #007aff; }
+    .page-bus .bus-header .order {
+      background-color: #B8BA98; }
+  .page-bus .bus-body {
+    width: 100%;
+    text-align: center;
+    background-color: #fff; }
+    .page-bus .bus-body .bus-text {
+      background-color: #B8BA98;
+      float: right;
+      padding: 4px;
+      margin-right: 15px; }
+      .page-bus .bus-body .bus-text button {
+        color: #fff;
+        font-size: 12px;
+        font-weight: normal;
+        border: none;
+        background: #B8BA98; }
+    .page-bus .bus-body td {
+      padding: 4px 10px; }
+      .page-bus .bus-body td .user-name {
+        position: absolute;
+        bottom: -12px;
+        color: #000;
+        width: 100%;
+        padding: 0 10px;
+        left: 0;
+        font-size: 12px; }
+    @media screen and (max-width: 768px) {
+      .page-bus .bus-body button {
+        display: block;
+        height: 50px;
+        color: #60418c;
+        font-size: 16px;
+        line-height: 38px;
+        font-weight: bold;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        border: none; } }
+    @media screen and (min-width: 768px) {
+      .page-bus .bus-body button {
+        display: block;
+        height: 100px;
+        color: #60418c;
+        font-size: 16px;
+        line-height: 65px;
+        font-weight: bold;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        border: none; } }
+    .page-bus .bus-body td.icon-seat-void {
+      width: inherit; }
+      .page-bus .bus-body td.icon-seat-void button {
+        background-image: url("/static/images/seat-void.png");
+        width: 100%;
+        color: #fff; }
+    .page-bus .bus-body td.icon-seat-order {
+      width: inherit; }
+      .page-bus .bus-body td.icon-seat-order button {
+        background-image: url("/static/images/seat-order.png");
+        width: 100%;
+        color: #fff; }
+    .page-bus .bus-body td.icon-seat-select {
+      width: inherit; }
+      .page-bus .bus-body td.icon-seat-select button {
+        background-image: url("/static/images/seat-select.png") !important;
+        color: yellow;
+        width: 100%; }
+  .page-bus .silder-nav {
+    position: absolute;
+    left: 0;
+    width: 15px;
+    top: 30px;
+    font-size: 12px; }
+    .page-bus .silder-nav li {
+      height: 58px;
+      padding: 0;
+      line-height: 58px;
+      text-align: center;
+      border-right: 1px solid #666; }
+    .page-bus .silder-nav li:first-child {
+      border-top: 1px solid #666; }
+    .page-bus .silder-nav li:last-child {
+      border-bottom: 1px solid #666; }
+  .page-bus .input-select {
+    height: 21px;
+    float: right;
+    width: 80px; }
+
+/*# sourceMappingURL=bus.css.map */
+
 /*!/components/page/search/result/result.scss*/
 .page-search-result .time-nav {
   text-align: center;
@@ -389,25 +540,6 @@ select.form-control {
 
 /*# sourceMappingURL=validate.css.map */
 
-/*!/components/page/search/result/result.css*/
-.page-search-result .time-nav {
-  text-align: center;
-  color: #007aff;
-  line-height: 44px; }
-  .page-search-result .time-nav .mui-action {
-    width: 40px;
-    margin: 3px;
-    color: #007aff;
-    font-size: 20px;
-    padding: 5px 1px;
-    text-align: center;
-    border: 1px solid #ddd; }
-  .page-search-result .time-nav .time {
-    padding-left: 20px;
-    padding-right: 20px; }
-
-/*# sourceMappingURL=result.css.map */
-
 /*!/components/page/validate/validate.scss*/
 
 .page-service {
@@ -501,6 +633,136 @@ select.form-control {
   -webkit-animation: twinkling 2s infinite ease;
   animation: twinkling 2s infinite ease;
 }
+/*!/components/page/bus/bus.scss*/
+.page-bus {
+  background-color: #fff;
+  height: 100%; }
+  .page-bus .bus-backDoor {
+    position: absolute; }
+  .page-bus .user-bar {
+    top: 45px;
+    background-color: #fff; }
+  .page-bus .mui-scroll-wrapper {
+    background-color: #fff; }
+    .page-bus .mui-scroll-wrapper .mui-scroll {
+      padding-bottom: 50px; }
+  .page-bus .mui-scroll {
+    padding: 10px;
+    background-color: #fff; }
+  .page-bus .mui-table-view-cell.mui-active {
+    background-color: #fff; }
+  .page-bus .bus-header {
+    text-align: center;
+    font-size: 12px; }
+    .page-bus .bus-header .bus-driver {
+      float: left;
+      width: 12%;
+      margin-left: 5%; }
+    .page-bus .bus-header .bus-door {
+      float: right;
+      display: inline-block;
+      width: 20px;
+      margin-right: 5%;
+      color: #fff;
+      background-color: #B8BA98; }
+    .page-bus .bus-header button {
+      height: 15px;
+      width: 15px;
+      vertical-align: middle;
+      display: inline-block;
+      margin-left: 5px; }
+    .page-bus .bus-header .void {
+      background-color: #007aff; }
+    .page-bus .bus-header .order {
+      background-color: #B8BA98; }
+  .page-bus .bus-body {
+    width: 100%;
+    text-align: center;
+    background-color: #fff; }
+    .page-bus .bus-body .bus-text {
+      background-color: #B8BA98;
+      float: right;
+      padding: 4px;
+      margin-right: 15px; }
+      .page-bus .bus-body .bus-text button {
+        color: #fff;
+        font-size: 12px;
+        font-weight: normal;
+        border: none;
+        background: #B8BA98; }
+    .page-bus .bus-body td {
+      padding: 4px 10px; }
+      .page-bus .bus-body td .user-name {
+        position: absolute;
+        bottom: -12px;
+        color: #000;
+        width: 100%;
+        padding: 0 10px;
+        left: 0;
+        font-size: 12px; }
+    @media screen and (max-width: 768px) {
+      .page-bus .bus-body button {
+        display: block;
+        height: 50px;
+        color: #60418c;
+        font-size: 16px;
+        line-height: 38px;
+        font-weight: bold;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        border: none; } }
+    @media screen and (min-width: 768px) {
+      .page-bus .bus-body button {
+        display: block;
+        height: 100px;
+        color: #60418c;
+        font-size: 16px;
+        line-height: 65px;
+        font-weight: bold;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        border: none; } }
+    .page-bus .bus-body td.icon-seat-void {
+      width: inherit; }
+      .page-bus .bus-body td.icon-seat-void button {
+        background-image: url("/static/images/seat-void.png");
+        width: 100%;
+        color: #fff; }
+    .page-bus .bus-body td.icon-seat-order {
+      width: inherit; }
+      .page-bus .bus-body td.icon-seat-order button {
+        background-image: url("/static/images/seat-order.png");
+        width: 100%;
+        color: #fff; }
+    .page-bus .bus-body td.icon-seat-select {
+      width: inherit; }
+      .page-bus .bus-body td.icon-seat-select button {
+        background-image: url("/static/images/seat-select.png") !important;
+        color: yellow;
+        width: 100%; }
+  .page-bus .silder-nav {
+    position: absolute;
+    left: 0;
+    width: 15px;
+    top: 30px;
+    font-size: 12px; }
+    .page-bus .silder-nav li {
+      height: 58px;
+      padding: 0;
+      line-height: 58px;
+      text-align: center;
+      border-right: 1px solid #666; }
+    .page-bus .silder-nav li:first-child {
+      border-top: 1px solid #666; }
+    .page-bus .silder-nav li:last-child {
+      border-bottom: 1px solid #666; }
+  .page-bus .input-select {
+    height: 21px;
+    float: right;
+    width: 80px; }
+
 /*!/static/css/layer.css*/
 /* layer弹层移动版样式 */
 
