历史订票查询

--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -58,9 +58,8 @@
                 <ul class="mui-table-view mui-list" style="margin-top: 25px;margin-bottom: 60px;">
                     <i class=" mui-pull-left iconfont icon-time"></i>
                     <li class="mui-table-view-cell">
-                        <a class="#mui-navigate-right" >
+                        <a class="#mui-navigate-right" href="#history">
                             历史订单
-                            <span class="mui-badge">开发中</span>
                         </a>
                     </li>
                     <i class=" mui-pull-left iconfont icon-target"></i>
