历史订票查询

--- a/src/main/resources/webapp/static/components/page/history/history.html
+++ b/src/main/resources/webapp/static/components/page/history/history.html
@@ -10,7 +10,7 @@
             <div class="mui-input-group">
                 <div class="mui-input-row">
                     <label>查询日期</label>
-                    <input type="text" v-on="click:showDatePicker" v-model="date" placeholder="请选择查询日期">
+                    <input type="button" v-on="click:showDatePicker" v-attr="value:date" style="height: 40px" >
                 </div>
             </div>
         </div>
