--- a/src/main/resources/sources/front/components/page/index.html
+++ b/src/main/resources/sources/front/components/page/index.html
@@ -14,6 +14,7 @@
     <script src="/static/js/mod.js"></script>
     <script src="/static/js/mui.js"></script>
     <script src="/static/js/mui.indexedlist.js"></script>
+    <script src="/static/js/mui.picker.min.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
 </script>
