--- a/src/main/resources/sources/front/components/page/config/config.html
+++ b/src/main/resources/sources/front/components/page/config/config.html
@@ -58,14 +58,13 @@
                 <ul class="mui-table-view mui-list" style="margin-top: 25px;margin-bottom: 60px;">
                     <i class=" mui-pull-left iconfont icon-time"></i>
                     <li class="mui-table-view-cell">
-                        <a class="#mui-navigate-right" >
+                        <a class="mui-navigate-right" href="#history">
                             历史订单
-                            <span class="mui-badge">开发中</span>
                         </a>
                     </li>
                     <i class=" mui-pull-left iconfont icon-target"></i>
                     <li class="mui-table-view-cell mui-media">
-                        <a href="http://mp.weixin.qq.com/s?__biz=MzIxOTEwMDcwOQ==&mid=400376477&idx=1&sn=aaf861f22ac9ffc3a18bf13eaf858eb7&scene=18#wechat_redirect" class="#mui-navigate-right" >
+                        <a href="http://mp.weixin.qq.com/s?__biz=MzIxOTEwMDcwOQ==&mid=400376477&idx=1&sn=aaf861f22ac9ffc3a18bf13eaf858eb7&scene=18#wechat_redirect" class="mui-navigate-right" >
                             帮助文档
                         </a>
                     </li>
