--- a/src/main/resources/webapp/admin/static/components/page/user/user.html
+++ b/src/main/resources/webapp/admin/static/components/page/user/user.html
@@ -2,7 +2,7 @@
     <div class="panel admin-panel">
         <div class="panel-head">
             <strong>
-                用户列表
+                用户列表a
             </strong>
         </div>
         <div class="padding border-bottom">
