--- a/src/main/resources/sources/admin/components/page/user/user.html
+++ b/src/main/resources/sources/admin/components/page/user/user.html
@@ -1,144 +1,164 @@
-<div class="page-user">
-    <div class="panel admin-panel">
-        <div class="panel-head">
-            <strong>
-                用户列表
-            </strong>
-        </div>
-        <div class="padding border-bottom">
-            <div class="form-inline">
-                <div class="form-group">
-                    <div class="label">
-                        处室：
-                    </div>
-                    <div class="field">
-                        <input type="text" v-model="query.department" class="input" placeholder="处室">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="label">
-                        科室：
-                    </div>
-                    <div class="field">
-                        <input type="text" v-model="query.unit" class="input" placeholder="科室">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <button class="button  bg-green" v-on="click:onQuery" data-target="#user-dialog" data-mask="1" data-width="50%"    >
-                        <span class="icon-search"></span>搜索</button>
-                    </button>
 
-                </div>
-                <div class="form-group">
-                    <button class="button  bg-red-light" v-on="click:onReset" data-target="#user-dialog" data-mask="1" data-width="50%"    >
-                        <span class="icon-recycle"></span>重置</button>
-                    </button>
+
+
+<table>
+    <tr>
+        <td>
+            <div  class="">
+                <div id="treeDemo" class="ztree"></div>
+            </div>
+
+        </td>
+        <td>
+            <div class="page-user " >
+
+                <div class="panel admin-panel">
+                    <div class="panel-head">
+                        <strong>
+                            用户列表
+                        </strong>
+                    </div>
+                    <div class="padding border-bottom">
+                        <div class="form-inline">
+                            <div class="form-group">
+                                <div class="label">
+                                    用户名：
+                                </div>
+                                <div class="field">
+                                    <input type="text" v-model="query.name" class="input" placeholder="用户名">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="label">
+                                    邮箱：
+                                </div>
+                                <div class="field">
+                                    <input type="text" v-model="query.email" class="input" placeholder="邮箱">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <button class="button  bg-green" v-on="click:onQuery" data-target="#user-dialog" data-mask="1" data-width="50%"    >
+                                    <span class="icon-search"></span>搜索</button>
+                                </button>
+
+                            </div>
+                            <div class="form-group">
+                                <button class="button  bg-red-light" v-on="click:onReset" data-target="#user-dialog" data-mask="1" data-width="50%"    >
+                                    <span class="icon-recycle"></span>重置</button>
+                                </button>
+
+                            </div>
+
+                        </div>
+                        <input type="button" class="button  bg-main float-right" data-target="#user-dialog" data-mask="1" data-width="50%"  v-on="click:addUser" value="新增用户" />
+
+                        <!--<input type="button" class="button button-small bg-main" data-target="#user-dialog" data-mask="1" data-width="50%"  v-on="click:inputUser" value="导入用户" />-->
+                        <!--<input type="button" class="button button-small bg-main" data-target="#user-dialog" data-mask="1" data-width="50%"  v-on="click:dellAllUser" value="删除全部" />-->
+                    </div>
+
+                    <table class="table table-hover">
+                        <tr><th width="120">用户名</th><th width="*">邮箱</th><th width="100">手机号码</th><th width="150">处室</th><th width="150">科室</th><th width="100">用户类型</th><th width="100">登录密码</th><th width="140">操作</th></tr>
+                        <tr v-repeat="c in users">
+                            <td>{{c.name}}</td>
+                            <td>{{c.email}}</td>
+                            <td>{{c.mobile}}</td>
+                            <td>{{c.department}}</td>
+                            <td>{{c.unit}}</td>
+                            <!--<td>{{c.limit?c.limit:1}}</td>-->
+                            <td>{{c.admin == 1?"管理员":"普通用户"}}</td>
+                            <td>{{c.password}}</td>
+                            <td><a v-on="click:editUser(c)" class="button border-blue button-little" href="javascript:;">修改</a> <a class="button border-yellow button-little" v-on="click:delUser(c._id)" href="javascript:;">删除</a> </td></tr>
+                    </table>
+
+                    <c-pager count="{{@ count}}" limit="{{@ limit}}" page="{{@ page}}"></c-pager>
+
+                    <div class="dialog-mask" style="display: none;"></div>
+                    <div id="user-dialog" class="dialog-win" style="position: fixed; width: 50%; z-index: 11;display: none;">
+                        <div class="dialog open">
+                            <div class="dialog-head">
+                                <span class="close" v-on="click:closeDialog"></span>
+                                <strong>{{user._type}}</strong>
+                            </div>
+                            <div class="dialog-body">
+                                <div class="form-x">
+                                    <div class="form-group">
+                                        <div class="label">
+                                            用户名
+                                        </div>
+                                        <div class="field">
+                                            <input type="text" class="input" v-model="user.name" placeholder="请填写用户名">
+                                            <div v-show="!validation.name" class="input-help  check-error"><ul><li>必填</li></ul></div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="label">
+                                            邮箱
+                                        </div>
+                                        <div class="field">
+                                            <input type="text" class="input" v-model="user.email" placeholder="请填写邮箱">
+                                            <div v-show="!validation.email" class="input-help  check-error"><ul><li>请填写邮箱格式</li></ul></div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="label">
+                                            手机号
+                                        </div>
+                                        <div class="field">
+                                            <input type="text" class="input" v-model="user.mobile" placeholder="请填写手机号">
+                                            <div v-show="!validation.mobile" class="input-help  check-error"><ul><li>请填写正确手机号码</li></ul></div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="label">
+                                            处室
+                                        </div>
+                                        <div class="field">
+                                            <input type="text" class="input" v-model="user.department" placeholder="请填写处室">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="label">
+                                            科室
+                                        </div>
+                                        <div class="field">
+                                            <input type="text" class="input" v-model="user.unit" placeholder="请填写科室">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="label">
+                                            用户类型
+                                        </div>
+                                        <div class="field">
+                                            <select class="input" v-model="user.admin" number>
+                                                <option value=0>普通用户</option>
+                                                <option value=1>管理员</option>
+                                                <option value=3>订票员</option>
+                                                <option value=4>处室负责人</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="label">
+                                            登录密码
+                                        </div>
+                                        <div class="field">
+                                            <input type="text" class="input" v-model="user.password" placeholder="请填写登录密码">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="dialog-foot">
+                                <button class="button dialog-close" v-on="click:closeDialog">取消</button>
+                                <button class="button bg-green" v-disabled="isValid" v-on="click:postUser" >确认</button>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
 
             </div>
-            <input type="button" class="button  bg-main float-right" data-target="#user-dialog" data-mask="1" data-width="50%"  v-on="click:addUser" value="新增用户" />
+        </td>
+    </tr>
+</table>
 
-            <!--<input type="button" class="button button-small bg-main" data-target="#user-dialog" data-mask="1" data-width="50%"  v-on="click:inputUser" value="导入用户" />-->
-            <!--<input type="button" class="button button-small bg-main" data-target="#user-dialog" data-mask="1" data-width="50%"  v-on="click:dellAllUser" value="删除全部" />-->
-        </div>
-        <table class="table table-hover">
-            <tr><th width="120">用户名</th><th width="*">邮箱</th><th width="100">手机号码</th><th width="150">处室</th><th width="150">科室</th><th width="100">用户类型</th><th width="100">登录密码</th><th width="140">操作</th></tr>
-            <tr v-repeat="c in users">
-                <td>{{c.name}}</td>
-                <td>{{c.email}}</td>
-                <td>{{c.mobile}}</td>
-                <td>{{c.department}}</td>
-                <td>{{c.unit}}</td>
-                <!--<td>{{c.limit?c.limit:1}}</td>-->
-                <td>{{c.admin == 1?"管理员":"普通用户"}}</td>
-                <td>{{c.password}}</td>
-                <td><a v-on="click:editUser(c)" class="button border-blue button-little" href="javascript:;">修改</a> <a class="button border-yellow button-little" v-on="click:delUser(c._id)" href="javascript:;">删除</a> </td></tr>
-        </table>
 
-        <c-pager count="{{@ count}}" limit="{{@ limit}}" page="{{@ page}}"></c-pager>
-
-        <div class="dialog-mask" style="display: none;"></div>
-        <div id="user-dialog" class="dialog-win" style="position: fixed; width: 50%; z-index: 11;display: none;">
-            <div class="dialog open">
-                <div class="dialog-head">
-                    <span class="close" v-on="click:closeDialog"></span>
-                    <strong>{{user._type}}</strong>
-                </div>
-                <div class="dialog-body">
-                    <div class="form-x">
-                        <div class="form-group">
-                            <div class="label">
-                                用户名
-                            </div>
-                            <div class="field">
-                                <input type="text" class="input" v-model="user.name" placeholder="请填写用户名">
-                                <div v-show="!validation.name" class="input-help  check-error"><ul><li>必填</li></ul></div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="label">
-                                邮箱
-                            </div>
-                            <div class="field">
-                                <input type="text" class="input" v-model="user.email" placeholder="请填写邮箱">
-                                <div v-show="!validation.email" class="input-help  check-error"><ul><li>请填写邮箱格式</li></ul></div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="label">
-                                手机号
-                            </div>
-                            <div class="field">
-                                <input type="text" class="input" v-model="user.mobile" placeholder="请填写手机号">
-                                <div v-show="!validation.mobile" class="input-help  check-error"><ul><li>请填写正确手机号码</li></ul></div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="label">
-                                处室
-                            </div>
-                            <div class="field">
-                                <input type="text" class="input" v-model="user.department" placeholder="请填写处室">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="label">
-                                科室
-                            </div>
-                            <div class="field">
-                                <input type="text" class="input" v-model="user.unit" placeholder="请填写科室">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="label">
-                                用户类型
-                            </div>
-                            <div class="field">
-                                <select class="input" v-model="user.admin" number>
-                                    <option value=0>普通用户</option>
-                                    <option value=1>管理员</option>
-                                    <option value=3>订票员</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="label">
-                                登录密码
-                            </div>
-                            <div class="field">
-                                <input type="text" class="input" v-model="user.password" placeholder="请填写登录密码">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="dialog-foot">
-                    <button class="button dialog-close" v-on="click:closeDialog">取消</button>
-                    <button class="button bg-green" v-disabled="isValid" v-on="click:postUser" >确认</button>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-</div>
