--- a/src/main/resources/sources/admin/components/page/check/busSeat/busSeat.html
+++ b/src/main/resources/sources/admin/components/page/check/busSeat/busSeat.html
@@ -29,6 +29,8 @@
       <a style="cursor: default; line-height: 16px; height: 16px;" class="iconfont" v-text="getText(r,$index)" >
       </a>
 	  <p class="user-name" v-text="getSeatUserName(r,$index)" style='margin-bottom: 4px;'></p>
+         <p class="user-name" v-text="getSeatUserSource(r,$index)" style='margin-bottom: 4px;'></p>
+
      </td>
     </tr>
    </table>
