--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -34,9 +34,14 @@
                         </a>
                     </li>
 
+                    <i class=" mui-pull-left iconfont icon-tuangou"></i>
+                    <li class="mui-table-view-cell">
+                        <a class="mui-navigate-right" href="#approve">合作单位人员审批
+                        </a>
+                    </li>
                 </ul>
 
-                <h5 style="margin-top: 40px" class="mui-content-padded">其他应用</h5>
+                <h5 style="margin-top: 5px" class="mui-content-padded">其他应用</h5>
                 <ul class="mui-table-view mui-list ">
                     <i class=" mui-pull-left iconfont icon-plane"></i>
                     <li class="mui-table-view-cell mui-media">
