--- a/src/main/resources/sources/front/components/page/bus/bus.html
+++ b/src/main/resources/sources/front/components/page/bus/bus.html
@@ -1,7 +1,8 @@
 <div class="page-bus" >
     <header class="mui-bar mui-bar-nav">
-        <h5 class="mui-title" style="line-height: 18px;margin-top: 5px;">{{bus.name}}
+        <h5 class="mui-title" style="line-height: 18px;margin-top: 5px;">{{bus.name}} ¼ÝÊ»Ô±£º{{bus.jsy}} ³µÅÆºÅ£º{{bus.sn}}
             <p>{{bus.line}} {{bus.goff}}</p>
+
         </h5>
         <a class=" mui-icon mui-icon-left-nav mui-pull-left" v-on="click:backTo('search/result')"></a>
         <a class="mui-icon  mui-icon-home-filled mui-pull-right" href="#search"></a>
