--- a/src/main/resources/sources/front/components/page/config/config.html
+++ b/src/main/resources/sources/front/components/page/config/config.html
@@ -7,7 +7,7 @@
         </header>
         <div class="mui-content mui-scroll-wrapper">
             <div class="mui-scroll">
-                <ul class="mui-table-view mui-list" style="margin-top: 20px;">
+                <ul class="mui-table-view mui-list" style="margin-top: 5px;">
                     <i class=" mui-pull-left iconfont icon-user"></i>
                     <li class="mui-table-view-cell mui-media">
                         <a class="mui-navigate-right" >
@@ -20,7 +20,7 @@
 
                 </ul>
 
-                <ul class="mui-table-view mui-list" style="margin-top: 25px;">
+                <ul class="mui-table-view mui-list" style="margin-top: 5px;">
                     <i class=" mui-pull-left iconfont icon-users"></i>
                     <li class="mui-table-view-cell">
                         <a class="mui-navigate-right" href="#relation">
@@ -34,9 +34,15 @@
                         </a>
                     </li>
 
-                    <i class=" mui-pull-left iconfont icon-tuangou"></i>
+                    <i class=" mui-pull-left iconfont icon-car"></i>
                     <li class="mui-table-view-cell">
                         <a class="mui-navigate-right" href="#approve">合作单位人员审批
+                        </a>
+                    </li>
+                    <i class=" mui-pull-left iconfont icon-bus"></i>
+                    <li class="mui-table-view-cell mui-media">
+                        <a href="#tel" class="mui-navigate-right" >
+                            常用电话
                         </a>
                     </li>
                 </ul>
@@ -59,8 +65,8 @@
                             </div>
                         </a>
                     </li>
-                </ul>
-                <ul class="mui-table-view mui-list" style="margin-top: 25px;margin-bottom: 60px;">
+                <!--</ul>-->
+                <!--<ul class="mui-table-view mui-list" style="margin-top: 25px;margin-bottom: 60px;">-->
                     <i class=" mui-pull-left iconfont icon-time"></i>
                     <li class="mui-table-view-cell">
                         <a class="mui-navigate-right" href="#history">
@@ -73,6 +79,7 @@
                             帮助文档
                         </a>
                     </li>
+
                 </ul>
             </div>
         </div>
