最新源代码

--- a/src/main/resources/sources/admin/static/css/style.css
+++ b/src/main/resources/sources/admin/static/css/style.css
@@ -128,4 +128,7 @@ html, body {
 .page-login .panel:hover {
   opacity: 1; }
 
+.ztree li span.button {
+  padding: 0; }
+
 /*# sourceMappingURL=style.css.map */
