--- a/src/main/resources/sources/front/components/page/config/config.html
+++ b/src/main/resources/sources/front/components/page/config/config.html
@@ -39,6 +39,8 @@
                         <a class="mui-navigate-right" href="#approve">合作单位人员审批
                         </a>
                     </li>
+
+
                 </ul>
 
                 <h5 style="margin-top: 5px" class="mui-content-padded">其他应用</h5>
@@ -71,6 +73,12 @@
                     <li class="mui-table-view-cell mui-media">
                         <a href="http://mp.weixin.qq.com/s?__biz=MzIxOTEwMDcwOQ==&mid=400376477&idx=1&sn=aaf861f22ac9ffc3a18bf13eaf858eb7&scene=18#wechat_redirect" class="mui-navigate-right" >
                             帮助文档
+                        </a>
+                    </li>
+                    <i class=" mui-pull-left iconfont icon-bus"></i>
+                    <li class="mui-table-view-cell mui-media">
+                        <a href="#tel" class="mui-navigate-right" >
+                            常用电话
                         </a>
                     </li>
                 </ul>
