--- a/src/main/resources/webapp/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/static/components/page/bus/bus.html
@@ -1,6 +1,6 @@
 <div class="page-bus" >
     <header class="mui-bar mui-bar-nav">
-        <h5 class="mui-title" style="line-height: 18px;margin-top: 5px;">{{bus.name}} 驾驶员：{{bus.jsy}} 车牌号：{{bus.sn}}
+        <h5 class="mui-title" style="line-height: 18px;margin-top: 5px;">{{bus.name}}  车牌号：{{bus.sn}}
             <p>{{bus.line}} {{bus.goff}}</p>
 
         </h5>
@@ -19,6 +19,7 @@
         <div class="mui-scroll" >
             <div class="bus-header">
                 <img class="bus-driver" src="/static/images/bus-driver.png">
+                驾驶员：{{bus.jsy}}
                 <a class="void"></a> 可选
                 <a class="order"></a> 已选
 
