--- a/src/main/resources/sources/admin/components/page/index.html
+++ b/src/main/resources/sources/admin/components/page/index.html
@@ -26,7 +26,7 @@
 <script src="/static/js/lrz.pc.min.js"></script>
 <script src="/static/js/laydate/laydate.js"></script>
 <script type="text/javascript" src="/static/js/ztree/js/jquery.ztree.all-3.5.js"></script>
-
+<script language="javascript" type="text/javascript" src="/static/js/date97/WdatePicker.js"></script>
 <script type="text/javascript">
 
     var CONFIG = {
