--- a/src/main/resources/webapp/order/static/components/page/notice/notice.html
+++ b/src/main/resources/webapp/order/static/components/page/notice/notice.html
@@ -5,6 +5,9 @@
 </header>
 <div class="mui-content">
     <ul class="mui-table-view">
+        <li style="text-align: center" v-show="notices.length ==0">
+            暂无公告
+        </li>
         <li v-for="n in notices" class="mui-table-view-cell mui-media">
             <a href="javascript:;" @click="onShowContent(n)" class="mui-navigate-right">
                 <div class="mui-media-body">
