--- a/src/main/resources/webapp/order/static/components/page/order/order.html
+++ b/src/main/resources/webapp/order/static/components/page/order/order.html
@@ -29,7 +29,7 @@
             </li>
             <li class="mui-table-view-cell"  >
                 <a  class="mui-navigate-right"  @click="onSelect('dinner')"  :class="{disabled:!dinner}"  >
-                    晚餐 <span v-show="!lunch">(今日已过期)</span>
+                    晚餐 <span v-show="!dinner">(今日已过期)</span>
                 </a>
             </li>
         </ul>
